# mcorelib

./: LICENSE.txt  README.md
include/: mapplication.h  mdebug.h  mlogger.h  mmacroutils.h  mmutex.h  mnamespace.h  mobject.h  mplatform.h  msemaphore.h  msigslot.h  mthread.h  mtimer.h  mtypes.h  mvariant.h  mwaitqueue.h
project/: CMakeLists.txt
project/stm32f407/: .cproject  .mxproject  .project  MyTest02 Debug.launch  MyTest02.ioc  STM32F407VETX_FLASH.ld  STM32F407VETX_RAM.ld
project/stm32f407/Core/Inc/: FreeRTOSConfig.h  board_led.h  board_log.h  i2c.h  rtc.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
project/stm32f407/Core/Src/: board_led.c  board_log.c  freertos.c  gpio.c  i2c.c  main.c  rtc.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c
sources/: mappevent.cpp  mappevent.h  mapplication.cpp  mlogger.cpp  mmutex.cpp  mobject.cpp  mobjectpool.cpp  mobjectpool.h  mplatform.cpp  msemaphore.cpp  mthread.cpp  mtimer.cpp  mtimertask.cpp  mtimertask.h  mvariant.cpp
sources/platform/: linux_mmutex.h  linux_msemaphore.h  linux_mthread.h  rtos_mmutex.h  rtos_msemaphore.h  rtos_mthread.h  rtos_new_delete.cpp  win_mmutex.h  win_msemaphore.h  win_mthread.h
testor/: test_timer_slot.cpp  test_variant_slot.cpp
